@@ -34,6 +34,7 @@ Unreleased Version 2.2.2-pre
  * Server Fix: Don't get announcement refreshes stuck in an infinite loop. Thanks Meru for reporting.
  * Fix: Make MyPaint brushes not ignore the first stroke made with them. This would also sometimes lead to a blank preview.
  * Feature: Allow choosing between a round and square expansion/shrinking kernel in flood fill, magic wand and when altering a selection. The latter is particularly useful for pixel art. Thanks Bigcheese and MorrowShore for suggesting.
+ * Fix: Don't ignore double-clicks when toggling layer visibility or check state. Thanks Chryssabliss for reporting.
 
 2024-08-09 Version 2.2.2-beta.3
  * Fix: Use more accurate timers for performance profiles if the platform supports it.
